# functional_trait

./: .gitignore  Cargo.toml  readme.md
example/: Cargo.toml
example/src/: main.rs
src/: lib.rs
