[package]
name = "functional_trait"
version = "1.0.1"
edition = "2021"
authors = ["wefcdse"]
description = "A macro that impls trait for Fns"
repository = "https://github.com/wefcdse/functional_trait"
readme = "readme.md"
license = "MIT OR Apache-2.0"
keywords = ["utils", "macro", "functional"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
syn = { version = "2.0.77", features = ["full"] }
proc-macro2 = { version = "1.0.86" }
quote = { version = "1.0.37" }
# async-trait = "0.1.77"
